feat: also write valuable nodes to result