@@ -1,3 +1,5 @@
+import scala.collection.immutable.Seq
+
 ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "2.13.12"
@@ -14,5 +16,43 @@ lazy val root = (project in file("."))
       "org.scalatest" %% "scalatest" % "3.0.8" % "test",
       "com.typesafe" % "config" % "1.4.1",
       "software.amazon.awssdk" % "s3" % "2.17.21",
+    ),
+    javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+      "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
     )
   )
+
+compileOrder := CompileOrder.JavaThenScala
+test / fork := true
+run / fork := true
+run / javaOptions ++= Seq(
+  "-Xms8G",
+  "-Xmx100G",
+  "-XX:+UseG1GC"
+)
+
+Compile / mainClass := Some("Main")
+run / mainClass := Some("Main")
+
+val jarName = "mitm_attack.jar"
+assembly / assemblyJarName := jarName
+
+// Merging strategies
+ThisBuild / assemblyMergeStrategy := {
+  case PathList("META-INF", _*) => MergeStrategy.discard
+  case "reference.conf" => MergeStrategy.concat
+  case _ => MergeStrategy.first
+}
